--- a/package.json
+++ b/package.json
@@ -22,21 +22,21 @@
   },
   "homepage": "https://github.com/Nover98/webpack-project-builder#readme",
   "devDependencies": {
-    "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^4.0.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.6.1",
-    "node-css-mqpacker": "^9.0.0",
-    "postcss": "^8.4.14",
-    "postcss-loader": "^7.0.0",
-    "postcss-preset-env": "^7.7.2",
-    "sass": "^1.53.0",
-    "sass-loader": "^13.0.2",
-    "sort-css-media-queries": "^2.0.4",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.2",
-    "webpack-merge": "^5.8.0"
+    "css-loader": "6.7.1",
+    "css-minimizer-webpack-plugin": "4.0.0",
+    "html-webpack-plugin": "5.5.0",
+    "mini-css-extract-plugin": "2.6.1",
+    "node-css-mqpacker": "9.0.0",
+    "postcss": "8.4.14",
+    "postcss-loader": "7.0.0",
+    "postcss-preset-env": "7.7.2",
+    "sass": "1.53.0",
+    "sass-loader": "13.0.2",
+    "sort-css-media-queries": "2.0.4",
+    "style-loader": "3.3.1",
+    "webpack": "5.73.0",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.9.2",
+    "webpack-merge": "5.8.0"
   }
 }
